--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,35 @@
   font-family: Poppins, sans-serif !important;
 }
 
+.ant-dropdown {
+  position: absolute;
+  height: 80vh;
+  width: 94vw;
+  margin-left: 15px;
+  text-align: center;
+  transition: none;
+}
+
+.ant-dropdown-menu {
+  height: 100%;
+  background-color: #001529 !important;
+}
+
+.ant-dropdown-menu li {
+  border-bottom: 1px #fff solid;
+  border-radius: 0 !important;
+  padding: 30px 12px !important;
+}
+
+.ant-dropdown-menu li:last-child {
+  border-bottom: transparent;
+}
+
+.ant-dropdown-menu-title-content a {
+  font-size: 30px;
+  color: #fff !important;
+}
+
 @-webkit-keyframes moveInLeft {
   0% {
     opacity: 0;
